# buyer-backend

./: .gitignore  CMakeLists.txt  Dockerfile  README.MD  config-sample.json  docker-compose.test.yml  docker-compose.yml  main.cc  test_config-sample.json  vcpkg.json
config/: config.hpp
controllers/: authentication.cc  authentication.hpp  chats.cc  chats.hpp  common_req_n_resp.hpp  community.cc  community.hpp  controller_template.hpp  dashboard.cc  dashboard.hpp  location.cc  location.hpp  media_server.cpp  media_server.hpp  notification_websocket.cpp  notification_websocket.hpp  offers.cc  offers.hpp  offers_negotiation.cc  orders.cc  orders.hpp  scenario_specific_utils.hpp  search.cc  search.hpp  users.cc  users.hpp
filters/: AuthMiddleware.cc  CorsMiddleware.cc  WebSocketAuthMiddleware.cc
migrations/: 001_complete_schema.sql  001_create_tables.sql  002_enhance_posts.sql  003_create_offers_table.sql  004_negotiation_and_product_proof.sql
scripts/: setup_test_db-sample.bat  setup_test_db-sample.sh
seeds/: 001_complete_seed_data.sql  001_seed_data.sql  002_enhanced_seed_data.sql  003_offer_seed_data.sql
services/: service_manager.hpp
services/media_server/: s3_service.cpp  s3_service.hpp
services/subber/: connection_manager.hpp  pub_manager.hpp  redis_pub_manager.hpp  redis_sub_manager.cpp  redis_sub_manager.hpp  sub_manager.hpp
test/: CMakeLists.txt  helpers.hpp  test_authentication.cc  test_chats.cc  test_community.cc  test_dashboard.cc  test_main.cc  test_offers_workflow.cc  test_orders.cc  test_proofs_and_escrow.cc  test_search.cc  test_users.cc
utilities/: conversion.hpp  json_manipulation.hpp  time_manipulation.hpp  uuid_generator.hpp  validation.hpp
